Bug 790138 - raise WebGL context limits on desktop - r=jgilbert